// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babelPluginAxiom aliased imports 1`] = `
"'use strict';

var _findComponent = require('@brandwatch/axiom-utils/dist/findComponent');

var _findComponent2 = _interopRequireDefault(_findComponent);

var _DotPlotChart = require('@brandwatch/axiom-charts/dist/DotPlotChart/DotPlotChart');

var _DotPlotChart2 = _interopRequireDefault(_DotPlotChart);

var _Base = require('@brandwatch/axiom-components/dist/Base/Base');

var _Base2 = _interopRequireDefault(_Base);

var _longDate = require('@brandwatch/axiom-formatting/dist/longDate');

var _longDate2 = _interopRequireDefault(_longDate);

var _shortDate = require('@brandwatch/axiom-formatting/dist/shortDate');

var _shortDate2 = _interopRequireDefault(_shortDate);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/* eslint-disable no-console */

var shortDate = function shortDate() {};
var longDate = function longDate() {};
var Base = function Base() {};
var DotPlotChart = function DotPlotChart() {};
var findComponent = function findComponent() {};

console.log(shortDate);
console.log(longDate);
console.log(Base);
console.log(DotPlotChart);
console.log(findComponent);

console.log(_shortDate2.default);
console.log(_longDate2.default);
console.log(_Base2.default);
console.log(_DotPlotChart2.default);
console.log(_findComponent2.default);"
`;

exports[`babelPluginAxiom destructured imports 1`] = `
"'use strict';

var _colors = require('@brandwatch/axiom-materials/dist/colors');

var _colors2 = _interopRequireDefault(_colors);

var _findComponent = require('@brandwatch/axiom-utils/dist/findComponent');

var _findComponent2 = _interopRequireDefault(_findComponent);

var _DotPlotChart = require('@brandwatch/axiom-charts/dist/DotPlotChart/DotPlotChart');

var _DotPlotChart2 = _interopRequireDefault(_DotPlotChart);

var _Base = require('@brandwatch/axiom-components/dist/Base/Base');

var _Base2 = _interopRequireDefault(_Base);

var _longDate = require('@brandwatch/axiom-formatting/dist/longDate');

var _longDate2 = _interopRequireDefault(_longDate);

var _shortDate = require('@brandwatch/axiom-formatting/dist/shortDate');

var _shortDate2 = _interopRequireDefault(_shortDate);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

console.log(_shortDate2.default); /* eslint-disable no-console */

console.log(_longDate2.default);
console.log(_Base2.default);
console.log(_DotPlotChart2.default);
console.log(_findComponent2.default);
console.log(_colors2.default.productColorNames);"
`;

exports[`babelPluginAxiom scoped imports 1`] = `
"'use strict';

var _findComponent = require('@brandwatch/axiom-utils/dist/findComponent');

var _findComponent2 = _interopRequireDefault(_findComponent);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var foo = function foo(findComponent) {
  return findComponent();
}; /* eslint-disable no-console */

foo(_findComponent2.default);"
`;
